# Bing-Objectness-linux

./: CMakeLists.txt  LICENSE  README.md
deplibs/: CMakeLists.txt
deplibs/LibLinear/: CMakeLists.txt
deplibs/LibObjectness/: CMakeLists.txt  CmFile.cpp  CmFile.h  CmShow.cpp  CmShow.h  CmTimer.h  DataSetVOC.cpp  DataSetVOC.h  FilterTIG.cpp  FilterTIG.h  ImgContrastBB.h  Objectness.cpp  Objectness.h  ValStructVec.h  kyheader.h
doc/: ReadMeFromKyle.txt  ReadMeFromXuXiduo  how to build
example/: CMakeLists.txt  main.cpp
