#xuxiduo@zju.edu.cn
PROJECT(BING)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
FIND_PACKAGE(OpenMP REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

#IF (NOT CMAKE_INSTALL_PREFIX)
#	SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/installdir)
#ENDIF(NOT CMAKE_INSTALL_PREFIX)
MESSAGE(STATUS "Install path : " ${CMAKE_INSTALL_PREFIX} )

SET(CMAKE_BUILD_TYPE "Release")
ADD_SUBDIRECTORY(deplibs)
ADD_SUBDIRECTORY(example)
INSTALL(DIRECTORY doc/ DESTINATION share/bing)


